examples/invalid_modules/cyclic_import/src/main.argx
module main

import cycle.alpha

type Ping { content: string }

agent Receiver {
    receives Ping
}

protocol Flow {
    User -> Receiver: tell Ping
}
